# flux-registry-rs

./: Cargo.toml  README.md
src/: lib.rs  main.rs  policy.rs  registry.rs  store.rs  vm.rs
tests/: test_cli.rs  test_store.rs  test_vm.rs
